Sun Feb  8 01:07:20 2004  Manish Singh  <yosh@gimp.org>

	* gdk-pixbuf-io.c: removed unnecessary G_OBJECT() cast checks.

	* io-jpeg.c: make the return type for to_callback_empty_output_buffer
	"boolean", which should be defined by the jpeg headers. The right
	return type for this function depends on how the jpeg library
	was built (one wonders what happens if different compilers are used).

2004-01-28  Hans Breuer  <hans@breuer.org>

	* gdk_pixbuf.def : updated externals

Sat Jan 17 23:02:55 2004  Matthias Clasen  <maclas@gmx.de>

	The second part of the fix for #114351 (see also 
	../Changelog)
	
	* gdk-pixbuf-i18n.h (P_): Use translation domain gtk20-properties.

Sat Jan 17 00:01:51 2004  Matthias Clasen  <maclas@gmx.de>

	The first part of the fix for #114351 (see also
	../ChangeLog): 

	* gdk-pixbuf-i18n.h: Define P_() for property blurbs and nicks.

	* gdk-pixbuf.c:  Mark property blurbs and nicks with P_().

Thu Jan  8 22:01:14 2004  Matthias Clasen  <maclas@gmx.de>

	* queryloaders.c (loader_sanity_check): Don't use bitwise operators
	on booleans.  (#130923, reported by Telsa Gwynne, fix by Dave Jones)

2004-01-06  Federico Mena Quintero  <federico@ximian.com>

	* gdk-pixbuf-io.c (gdk_pixbuf_save): Escape an ampersand in the
	documentation comment, and hack around an empty line in the code
	example so that gtk-doc won't put a <para> due to it.

	* gdk-pixbuf.c (gdk_pixbuf_get_pixels): Link to the documentation
	section on image data.

2004-01-06  Federico Mena Quintero  <federico@ximian.com>

	* gdk-pixdata.c (gdk_pixbuf_new_from_inline): Fix example in
	documentation comment.  Fixes #130701.

Wed Jan  7 02:41:14 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf-io.c (gdk_pixbuf_save_to_bufferv): 
	* gdk-pixbuf-io.c (gdk_pixbuf_save_to_buffer): 
	* gdk-pixbuf-io.c (gdk_pixbuf_save_to_callbackv): 
	* gdk-pixbuf-io.c (gdk_pixbuf_save_to_callback): New public API
	to save pixbufs to non-file locations.  (#82203, Tim Evans)

	* gdk-pixbuf.h: